--- a/primal-earthgame.ini
+++ b/primal-earthgame.ini
@@ -1,4 +1,4 @@
-[/Script/BeastsOfBermuda.ServerGameInstance]
+[/Script/PrimalEarth.ServerGameInstance]
 MapNameOverride="Majal_Island"
 GameMode="Survival"
 DiscordLink="attoric"
