Update GSPDownloadURL and GSPTokenURL descriptions; append /server.zip to update source data

--- a/hytaleconfig.json
+++ b/hytaleconfig.json
@@ -45,28 +45,28 @@
         "DisplayName": "GSP Download URL",
         "Category": "Hytale:stadia_controller",
         "Subcategory": "Server:dns:1",
-        "Description": "The base URL to download the GSP server build from. Instance ID will be appended automatically.",
+        "Description": "The base URL for GSP server downloads. Instance ID and /server.zip will be appended automatically.",
         "Keywords": "",
         "FieldName": "GSPDownloadURL",
         "InputType": "text",
         "Hidden": true,
         "ParamFieldName": "GSPDownloadURL",
         "ExcludeFromImport": true,
-        "DefaultValue": "",
+        "DefaultValue": "https://beta.attoric.net/api/v1/hytale/download/",
         "EnumValues": {}
     },
     {
         "DisplayName": "GSP Token Server URL",
         "Category": "Hytale:stadia_controller",
         "Subcategory": "Server:dns:1",
-        "Description": "The base URL for the GSP token server. Instance ID will be appended.",
+        "Description": "The base URL for the GSP token server. Instance ID will be appended automatically.",
         "Keywords": "",
         "FieldName": "GSPTokenURL",
         "InputType": "text",
         "Hidden": true,
         "ParamFieldName": "GSPTokenURL",
         "ExcludeFromImport": true,
-        "DefaultValue": "",
+        "DefaultValue": "https://beta.attoric.net/api/v1/hytale/tokens/",
         "EnumValues": {}
     },
     {
